[package]
name = "yg"
version = "0.1.1"
authors = ["Colin Moore <colin@moore.one>"]
edition = "2018"

description = "yg"

documentation = "https://y-network.github.io/documentation"
homepage = "https://y-network.github.io"
repository = "https://github.com/y-network/yg"

readme = "README.md"

keywords = []

categories = ["cryptography::cryptocurrencies"]

license = "GPL-3.0+"

[dependencies]